--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-xs-8 col-xs-offset-2">
                 <div class="input-group">
-                    <input type="text" class="form-control" name="x" placeholder="Pesquisar livro...">
+                    <input type="text" class="form-control" name="searchField" placeholder="Pesquisar livro...">
                     <span class="input-group-btn">
                         <button type="button" id="searchButton" class="btn btn-primary">Pesquisar</button>
                     </span>
@@ -20,17 +20,31 @@
             <div class="col-xs-4 col-xs-offset-2">
                 <div class="input-group">
                     <div class="radio">
-                        <label><input type="radio" name="optradio" checked>Título</label>
+                        <label><input type="radio" name="optradio" value="titulo" checked>Título</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="optradio">Assunto</label>
+                        <label><input type="radio" name="optradio" value="assunto">Assunto</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="optradio">Autor</label>
+                        <label><input type="radio" name="optradio" value="autor">Autor</label>
                     </div>
                 </div>
             </div>
-
+            <div class="container">
+                <table class="table" id="resultsTable">
+                    <thead>
+                        <tr>
+                            <th scope="col">Título</th>
+                            <th scope="col">Gênero</th>
+                            <th scope="col">Descrição</th>
+                            <th scope="col">Ano de lançamento</th>
+                            <th scope="col">Disponível?</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
     <script src="js/jquery-2.2.4.min.js"></script>
