--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                         <label><input type="radio" name="optradio" value="titulo" checked>Título</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="optradio" value="assunto">Assunto</label>
+                        <label><input type="radio" name="optradio" value="genero">Assunto</label>
                     </div>
                     <div class="radio">
                         <label><input type="radio" name="optradio" value="autor">Autor</label>
@@ -38,7 +38,7 @@
                             <th scope="col">Gênero</th>
                             <th scope="col">Descrição</th>
                             <th scope="col">Ano de lançamento</th>
-                            <th scope="col">Disponível?</th>
+                            <th scope="col">Disponibilidade</th>
                         </tr>
                     </thead>
                     <tbody>
