Adicionado id na tabela

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                         <label><input type="radio" name="optradio" value="titulo" checked>Título</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="optradio" value="genero">Assunto</label>
+                        <label><input type="radio" name="optradio" value="genero">Gênero</label>
                     </div>
                     <div class="radio">
                         <label><input type="radio" name="optradio" value="autor">Autor</label>
