--- a/src/index.html
+++ b/src/index.html
@@ -1,54 +1,31 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <title>Livraria</title>
+    <meta charset="UTF-8">
+    <title>Login</title>
+
+    <link rel="stylesheet" href="css/login.css">
+
 </head>
 
 <body>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-8 col-xs-offset-2">
-                <div class="input-group">
-                    <input type="text" class="form-control" name="searchField" placeholder="Pesquisar livro...">
-                    <span class="input-group-btn">
-                        <button type="button" id="searchButton" class="btn btn-primary">Pesquisar</button>
-                    </span>
-                </div>
+
+    <div class="login">
+        <h1>Login</h1>
+        <form method="post">
+            <input type="text" name="u" placeholder="Usuário" required="required" />
+            <input type="password" name="p" placeholder="Senha" required="required" />
+            <button id="login" class="btn btn-primary btn-block btn-large">Login</button>
+            <button class="btn btn-primary btn-block btn-large">Cadastro</button>
+            <div class="auxiliar" style="color:red;">
+                <h6></h6>
             </div>
-            <div class="col-xs-4 col-xs-offset-2">
-                <div class="input-group">
-                    <div class="radio">
-                        <label><input type="radio" name="optradio" value="titulo" checked>Título</label>
-                    </div>
-                    <div class="radio">
-                        <label><input type="radio" name="optradio" value="genero">Gênero</label>
-                    </div>
-                    <div class="radio">
-                        <label><input type="radio" name="optradio" value="autor">Autor</label>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <table class="table" id="resultsTable">
-                    <thead>
-                        <tr>
-                            <th scope="col">Título</th>
-                            <th scope="col">Gênero</th>
-                            <th scope="col">Descrição</th>
-                            <th scope="col">Ano de lançamento</th>
-                            <th scope="col">Disponibilidade</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+        </form>
     </div>
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/login.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
 
