--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,15 @@
 
     <div class="login">
         <h1>Login</h1>
-        <form method="post">
+        <form>
             <input type="text" name="u" placeholder="Usuário" required="required" />
             <input type="password" name="p" placeholder="Senha" required="required" />
-            <button id="login" class="btn btn-primary btn-block btn-large">Login</button>
-            <button class="btn btn-primary btn-block btn-large">Cadastro</button>
             <div class="auxiliar" style="color:red;">
                 <h6></h6>
             </div>
         </form>
+        <button id="login" class="btn btn-primary btn-block btn-large">Login</button>
+        <button class="btn btn-primary btn-block btn-large">Cadastro</button>
     </div>
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/script.js"></script>
