--- a/src/livros.html
+++ b/src/livros.html
@@ -36,7 +36,7 @@
                         <tr>
                             <th scope="col">Título</th>
                             <th scope="col">Gênero</th>
-                            <th scope="col">Descrição</th>
+                            <th scope="col">Autor</th>
                             <th scope="col">Ano de lançamento</th>
                             <th scope="col">Disponibilidade</th>
                         </tr>
@@ -45,6 +45,11 @@
                     </tbody>
                 </table>
             </div>
+        </div>
+        <div class="input-group">
+            <span class="input-group-btn">
+                <button type="button" id="logoutButton" class="btn btn-primary">Sair</button>
+            </span>
         </div>
     </div>
     <script src="js/jquery-2.2.4.min.js"></script>
