Finalização geral do projeto

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,8 @@
             </div>
         </form>
         <button id="login" class="btn btn-primary btn-block btn-large">Login</button>
-        <button class="btn btn-primary btn-block btn-large">Cadastro</button>
+        </br>
+        <button id="cadastro" class="btn btn-primary btn-block btn-large">Cadastro</button>
     </div>
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/script.js"></script>
